# page_analyzer_project

./: .coverage  .env.example  Makefile  README.md  config.py  coverage.xml  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  adding_website.py  app.py  correct_url.py  db.py  enums.py  find_tags.py  logic_views.py  psql_requests.py  url_utils.py
page_analyzer/templates/: base.html  error.html  get_url_data.html  index.html  show_all_urls.html  testing.html  testing2.html  testing3.html  urls.html
tests/: test_app.py
